# opeGL-template

./: .gitignore  CMakeLists.txt  run.sh
resources/cup/: license.txt  scene.gltf
src/: game.cpp  main.cpp
